crates/cribo/tests/snapshots/bundled_code@xfail_module_shadowing.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_module_shadowing/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
pandera = _cribo.types.SimpleNamespace(__name__='pandera', __initializing__=False, __initialized__=False)
def _cribo_init___cribo_b061eb_pandera(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    """First-party module that shadows the third-party pandera package."""
    print("Loading first-party pandera module")
    __version__ = "0.0.1-local"
    self.__version__ = __version__

    def local_function():
        return "This is from the local pandera module"
    self.local_function = local_function
    self.__initialized__ = True
    self.__initializing__ = False
    return self
pandera.__init__ = _cribo_init___cribo_b061eb_pandera
test_import = _cribo.types.SimpleNamespace(__name__='test_import', __initializing__=False, __initialized__=False)
def _cribo_init___cribo_2a6a8f_test_import(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    global pandera
    """Test module that tries to import pandera.polars.\n\nThis demonstrates what happens when we have a local 'pandera' module\nthat shadows the third-party pandera package, and we try to import\na submodule that only exists in the third-party package.\n"""
    print("Starting test_import.py")
    try:
        raise ImportError("No module named 'pandera.polars'; 'pandera' is not a package")
        print("Successfully imported pandera.polars")
        print(f"pandera.polars module: {pa.__name__}")
    except ImportError as e:
        test_import.e = e
        try:
            print(f"ImportError: {e}")
        finally:
            if _cribo.builtins.hasattr(test_import, 'e'):
                _cribo.builtins.delattr(test_import, 'e')
    except AttributeError as e:
        test_import.e = e
        try:
            print(f"AttributeError: {e}")
        finally:
            if _cribo.builtins.hasattr(test_import, 'e'):
                _cribo.builtins.delattr(test_import, 'e')
    try:
        pandera = _cribo_init___cribo_b061eb_pandera(pandera)
        test_import.pandera = pandera
        print("\nImported pandera successfully")
        print(f"pandera.__version__: {pandera.__version__}")
        if hasattr(pandera, "local_function"):
            print(f"This is the local pandera module: {pandera.local_function()}")
        else:
            print("This is the third-party pandera module")
    except ImportError as e:
        test_import.e = e
        try:
            print(f"\nFailed to import pandera: {e}")
        finally:
            if _cribo.builtins.hasattr(test_import, 'e'):
                _cribo.builtins.delattr(test_import, 'e')
    self.__initialized__ = True
    self.__initializing__ = False
    return self
test_import.__init__ = _cribo_init___cribo_2a6a8f_test_import
"""Main entry point that imports test_import to demonstrate module shadowing behavior."""
print("=== Module Shadowing Test ===")
print("This test demonstrates Python's behavior when a first-party module")
print("shadows a third-party package name.\n")
test_import = _cribo_init___cribo_2a6a8f_test_import(test_import)
print("\n=== Test Complete ===")
