crates/cribo/tests/snapshots/bundled_code@xfail_module_shadowing_package.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_module_shadowing_package/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        pristine = type(self)._pristine
        key = id(module)
        if getattr(module, '_cribo_machinery_loaded', False):
            saved = pristine.get(key)
            if saved is not None:
                module.__dict__.clear()
                module.__dict__.update(saved)
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        if key not in pristine:
            pristine[key] = dict(state)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('test_import', '_cribo_init___cribo_a6eb08_test_import', 'test_import', False)
_cribo_finder.register('pandera', '_cribo_init___cribo_2b5490_pandera', 'pandera', True)
pandera = _cribo.types.SimpleNamespace(__name__='pandera', __initializing__=False, __initialized__=False, __path__=[])
_cribo_finder.bind('pandera', pandera)
def _cribo_init___cribo_2b5490_pandera(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'pandera'
    self.__doc__ = 'First-party pandera package that shadows the third-party pandera package.'
    """First-party pandera package that shadows the third-party pandera package."""
    print("Loading first-party pandera package")
    __version__ = "0.0.1-local-package"
    self.__version__ = __version__

    def local_function():
        return "This is from the local pandera package"
    local_function.__module__ = 'pandera'
    local_function.__qualname__ = 'local_function'
    self.local_function = local_function
    self.__initialized__ = True
    self.__initializing__ = False
    return self
pandera.__init__ = _cribo_init___cribo_2b5490_pandera
test_import = _cribo.types.SimpleNamespace(__name__='test_import', __initializing__=False, __initialized__=False)
_cribo_finder.bind('test_import', test_import)
def _cribo_init___cribo_a6eb08_test_import(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''
    self.__doc__ = "Test module that tries to import pandera.polars.\n\nThis demonstrates what happens when we have a local 'pandera' package\nthat shadows the third-party pandera package, and we try to import\na submodule that only exists in the third-party package.\n"
    global pandera
    """Test module that tries to import pandera.polars.\n\nThis demonstrates what happens when we have a local 'pandera' package\nthat shadows the third-party pandera package, and we try to import\na submodule that only exists in the third-party package.\n"""
    print("Starting test_import.py")
    try:
        import pandera.polars as pa
        test_import.pa = pa
        print("Successfully imported pandera.polars")
        print(f"pandera.polars module: {pa.__name__}")
    except ImportError as e:
        test_import.e = e
        try:
            print(f"ImportError: {e}")
        finally:
            if _cribo.builtins.hasattr(test_import, 'e'):
                _cribo.builtins.delattr(test_import, 'e')
    except AttributeError as e:
        test_import.e = e
        try:
            print(f"AttributeError: {e}")
        finally:
            if _cribo.builtins.hasattr(test_import, 'e'):
                _cribo.builtins.delattr(test_import, 'e')
    try:
        pandera = _cribo_init___cribo_2b5490_pandera(pandera)
        test_import.pandera = pandera
        print("\nImported pandera successfully")
        print(f"pandera.__version__: {pandera.__version__}")
        if hasattr(pandera, "local_function"):
            print(f"This is the local pandera package: {pandera.local_function()}")
        else:
            print("This is the third-party pandera package")
    except ImportError as e:
        test_import.e = e
        try:
            print(f"\nFailed to import pandera: {e}")
        finally:
            if _cribo.builtins.hasattr(test_import, 'e'):
                _cribo.builtins.delattr(test_import, 'e')
    self.__initialized__ = True
    self.__initializing__ = False
    return self
test_import.__init__ = _cribo_init___cribo_a6eb08_test_import
"""Main entry point that imports test_import to demonstrate module shadowing behavior."""
print("=== Module Shadowing Test (Package Version) ===")
print("This test demonstrates Python's behavior when a first-party package")
print("shadows a third-party package name.\n")
test_import = _cribo_init___cribo_a6eb08_test_import(test_import)
print("\n=== Test Complete ===")
